[metadata]
name = pybokio
version = attr: pybokio.__version__
author = Johan Niklasson
author_email = johan@niklasson.me
description = Unofficial SDK for interacting with Bokio.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vonNiklasson/pybokio
project_urls =
    Source = https://github.com/vonNiklasson/pybokio
    Bug Reports = https://github.com/vonNiklasson/pybokio/issues
license = MIT
license_files = LICENSE
keywords = Bokio SDK API
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Office/Business :: Financial :: Accounting

[options]
python_requires = >=3.6
